<resources>
    <string name="app_name">Kuy Makan</string>
    <string name="home">Home</string>
    <string name="coupon">Coupon</string>
    <string name="info">Info</string>
    <string name="profile">Profile</string>
    <string name="bakalan_sumobito">Bakalan, Sumobito</string>
    <string name="pilih_lokasi">Pilih Lokasi</string>
    <string name="makanan_name">Makanan Name</string>
    <string name="tomorrow_s_menu">Tomorrow\'s Menu</string>
    <string name="all_day_breakfast">All-Day Breakfast</string>
    <string name="all_happiness_starts_with_a_delicious_breakfast">All happiness starts with a delicious breakfast</string>
    <string name="sold_out">Sold Out</string>
    <string name="get_a_daily_reminder_to_never_miss_out_again">Get a daily reminder to never miss out again</string>
    <string name="idr_30_000">IDR 30.000</string>
    <string name="nama_makanan_dummy">Nama Makanan Dummy cuma dibuat untuk desain saja (Mantap Enak).</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="start_saving">Start saving</string>
    <string name="discover_prime">DISCOVER PRIME</string>
    <string name="pre_pay_and_save_35_with_prime">Pre-pay and save 35% with Prime</string>
    <string name="thats_all_menu_today">Thats All Menu Today</string>
    <string name="coupon_yang_kupunya">Coupon yang kupunya</string>
    <string name="gambar_coupon">gambar_coupon</string>
    <string name="pakai">Pakai</string>
    <string name="berlaku_hingga_8_apr_2020">Berlaku hingga 8 Apr 2020</string>
    <string name="berlaku_hingga">Berlaku Hingga</string>
    <string name="_08_april_2020">08 April 2020</string>
    <string name="voucher_rp_42_000_pakai_kuy_pay">Voucher Rp 42.000 pakai Kuy Pay</string>
    <string name="syarat_dan_ketentuan">Syarat dan ketentuan</string>
    <string name="dummy_paragraf">addnadamdadkaddakhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhadakhhhhhhhhhhhhhhhhhhhhhhhhaddnadamdadkaddakhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhadakhhhhhhhhhhhhhhhhhhhhhhhhaddnadamdadkaddakhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhadakhhhhhhhhhhhhhhhhhhhhhhhhaddnadamdadkaddakhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhadakhhhhhhhhhhhhhhhhhhhhhhhh</string>
    <string name="cara_pakai">Cara pakai</string>
    <string name="deskripsi_coupon">Deskripsi Coupon</string>
    <string name="pakai_coupon">Pakai Coupon</string>
    <string name="punya_kode_promo">Punya kode promo?</string>
    <string name="masukan_kode_promonya_di_sini_ya">Masukan kode promonya di sini ya</string>
    <string name="eg_tahubulat40k">eg: TAHUBULAT40K</string>
    <string name="validasi_kodemu">VALIDASI KODEMU</string>
    <string name="baru_minggu_ini">Baru minggu ini</string>
    <string name="pilih_kategori">Pilih Kategori</string>
    <string name="aneka_kuliner_menarik">Aneka kuliner menarik</string>
    <string name="lihat_semua">Lihat semua</string>
    <string name="order">Order</string>
    <string name="dummy_nama_penjual">Gado-Gado Bakso Depan PKU, Syaid Sulaiman</string>
    <string name="dummy_penjual_alamat">7.91 km . Jl. Sayid Sulaiman No. 68, Mojoagung, Jombang</string>
    <string name="dummy_jam">07:30 – 15:00</string>
    <string name="promo_antar">PROMO ANTAR</string>
    <string name="kamu_lagi_dirumahaja">Kamu lagi #dirumahaja?</string>
    <string name="dummy_clock">04 Apr, 09:34 AM</string>
    <string name="dummy_info_text">Tungguin apalagi! Yuk cobain rekomendasi makanan terenak dari KuyMakan! klik</string>
    <string name="dummy_pocer">Voucher Rp 42.000 pakai Kuy Pay</string>
    <string name="sudah_sampai_tujuan">Sudah sampai tujuan</string>
    <string name="pesanan_dibatalkan">Pesanan dibatalkan</string>
    <string name="pesanan_f_101010101">Pesanan F-101010101</string>
    <string name="detail_pengantaran">Detail Pengantaran</string>
    <string name="alamat_restoran">Alamat Restoran</string>
    <string name="lokasi_tujuan_5_2_km">Lokasi Tujuan . 5,2 km</string>
    <string name="pesanan">Pesanan</string>
    <string name="salad_buah_200ml_rasa_white_cofee">Salad Buah 200ml Rasa White Cofee</string>
    <string name="detail_pembayaran">Detail Pembayaran</string>
    <string name="price_estimated">Price (estimated)</string>
    <string name="cetak_struk">Cetak Struk</string>
    <string name="dummy_profile_name">Wijanarko Putra Rajeb</string>
    <string name="dummy_profile_phone">+628585858585</string>
    <string name="admin_support_kuymakan_com">admin.support@kuymakan.com</string>
    <string name="simpan">Simpan</string>
    <string name="nama">Nama</string>
    <string name="nomor_telepon">Nomor telepon</string>
    <string name="email">Email</string>
    <string name="wijanarko_rajeb_gmail_com">wijanarko.rajeb@gmail.com</string>
    <string name="nim">170411100061</string>
    <string name="ppb">Pemrograman Perangkat Bergerak</string>
    <string name="kelas_d">Kelas D</string>
    <string name="https_rajebdev_github_io">https://rajebdev.github.io</string>
    <string name="ajak_teman_pakai_kuymakan">Ajak teman pakai KuyMakan</string>
    <string name="desc_invite">Biar mereka juga ngerasain enaknnya dibantuin ini itu sama KuyMakan.</string>
    <string name="sweets">Sweets</string>
    <string name="_4_27_km">4.27 km</string>
    <string name="dari_lokasimu">Dari lokasimu</string>
    <string name="_16rb_40rb">16rb-40rb</string>
    <string name="buka">Buka</string>
    <string name="hingga_21_00_hari_ini">hingga 21:00 hari ini</string>
    <string name="promo_yang_tersedia">Promo yang tersedia</string>
    <string name="ini_adalah_sebuah_header">Ini Adalah Sebuah Header</string>
    <string name="isi_semangka_apel_melon_buah_pir_dan_anggur">Isi semangka apel melon buah pir dan anggur</string>
    <string name="_6_500">6.500</string>
    <string name="_7_500">7.500</string>
    <string name="tambah">Tambah</string>
    <string name="share">Share</string>
    <string name="harga_makanan">Harga Makanan</string>
    <string name="_42_000">42.000</string>
    <string name="tambah_pesanan">Tambah Pesanan</string>
    <string name="kirim_otp">KIRIM OTP</string>
    <string name="no_hp">No HP</string>
    <string name="masukkan_nomor_hp_yang_terdaftar">Masukkan Nomor HP yang terdaftar</string>
    <string name="tidak_bisa_mengakses_no_hp_anda_yang_tedaftar">Tidak bisa mengakses no. HP Anda yang tedaftar ?</string>
    <string name="hubungi_kami">HUBUNGI KAMI</string>
    <string name="notice_otp">Masukkan kode verifikasi yang telah kami SMS ke no HP Anda yang terdaftar. JANGAN berikan kode kepada SIAPAPUN</string>
    <string name="kirim_ulang_kode_dalam_00_59">Kirim ulang kode dalam 00:59</string>
    <string name="flash_info">Oops, kode OTP yang Anda masukkan tidak valid.</string>
    <string name="promo">Promo</string>
    <string name="transaction">Transaksi</string>
    <string name="diskon_menu_detail">Beri diskon pada satu menu unutk tingkatkan voume transaksi restomu.</string>
    <string name="diskon_belanja_detail">Beri diskon dengan syarat min. pembelian untuk tingkatkan nilai rata-rata pembelian pelanggan.</string>
    <string name="help">Bantuan</string>
    <string name="my_outlet">Outlet saya</string>
    <string name="out_of_stock">Stok habis</string>
    <string name="menu">Menu</string>
    <string name="withdraw">Pencairan</string>
    <string name="detail">Rincian</string>
    <string name="warning_upload_image">Ketentuan upload: Harus foto makanan tanpa watermark (jangan cuma upload logo restoran aja, ya). Jika foto yang diupload tidak sesuai, tim Makan makan berhak menggantinya.</string>
    <string-array name="list_country_id">
        <item>+62</item>
        <item>+01</item>
        <item>+32</item>
        <item>+43</item>
    </string-array>
    <string-array name="list_user_types">
        <item>BUYER</item>
        <item>RESTAURANT</item>
    </string-array>
</resources>
