<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingTop="5dp"
    android:paddingStart="15dp"
    android:paddingEnd="15dp"
    android:paddingBottom="10dp"
    android:background="@color/colorLight"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:id="@+id/restaurant_name_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dummy_nama_penjual"
        android:textColor="@color/colorTextDark"
        android:textSize="14sp"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sweets"
        android:textColor="#888"
        android:textSize="12sp"
        android:layout_marginTop="10dp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#0033ff"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_gravity="bottom"
        app:cardCornerRadius="5dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:paddingTop="1dp"
            android:paddingBottom="1dp"
            android:orientation="horizontal"
            android:gravity="center">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/gojek"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/promo_antar"
                android:layout_marginStart="5dp"
                android:textSize="12sp"
                android:textColor="#fff"
                android:textStyle="bold"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="#888"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_place_black_24dp"/>
                <TextView
                    android:id="@+id/restaurant_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_4_27_km"
                    android:textColor="#000"
                    android:textStyle="bold"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dari_lokasimu"
                android:textColor="#888"
                android:layout_marginStart="5dp"
                android:textSize="12sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:orientation="horizontal">

            </LinearLayout>
            <TextView
                android:id="@+id/restaurant_price_range"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_16rb_40rb"
                android:textColor="#888"
                android:layout_marginStart="5dp"
                android:textSize="12sp"/>

        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="#ccc"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/restaurant_status_image"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_access_time_black_24dp"
            android:tint="@color/colorPrimary"/>
        <TextView
            android:id="@+id/restaurant_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/buka"
            android:textColor="@color/colorPrimary"/>
        <TextView
            android:id="@+id/restaurant_time_open"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textColor="#888"
            android:text="@string/hingga_21_00_hari_ini"/>

    </LinearLayout>
</LinearLayout>