<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="30dp"
            android:src="@drawable/kuymakan"
            android:scaleType="fitCenter" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/masukkan_nomor_hp_yang_terdaftar"
            android:textColor="@color/colorTextDark"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_phone_iphone_black_24dp"
                android:background="@null"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+62"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textSize="18sp"
                android:textColor="@color/colorTextDark"/>

            <EditText
                android:id="@+id/phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/no_hp"
                android:textColorHint="#888"
                android:maxLength="20"
                android:inputType="phone"
                android:backgroundTint="#888"
                android:textColor="@color/colorTextDark"/>
        </LinearLayout>
        <Button
            android:id="@+id/btn_send_otp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="15dp"
            android:text="@string/kirim_otp"
            android:textStyle="bold"
            android:background="@drawable/rounder_corner_green"
            android:textColor="#fff"
            android:textAllCaps="false"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/tidak_bisa_mengakses_no_hp_anda_yang_tedaftar"
            android:textColor="@color/colorTextDark"/>

        <TextView
            android:id="@+id/btn_call_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/hubungi_kami"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="16sp"/>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>