<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    android:layout_marginBottom="15dp"
    android:layout_marginTop="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/order_image"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:scaleType="centerCrop"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/ic_launcher_kuy"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:orientation="vertical">
                <TextView
                    android:id="@+id/order_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:text="@string/dummy_nama_penjual"
                    android:textStyle="bold"/>

            <TextView
                android:id="@+id/order_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sudah_sampai_tujuan"
                android:textColor="#333"
                android:textStyle="bold"
                android:layout_marginTop="2dp"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/order_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_clock"
                android:textColor="#333"
                android:textSize="12sp"/>

        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="#888"
        android:layout_marginTop="10dp"/>

</LinearLayout>